--- a/styles.css
+++ b/styles.css
@@ -110,13 +110,14 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: rgba(0,0,0,0.5);
 }
 
 .bookForm {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     justify-content:space-around;
