--- a/styles.css
+++ b/styles.css
@@ -88,8 +88,9 @@ body {
 
 .booksContainer {
     display: flex;
-    align-items: center;
-    gap: 30px;
+    justify-content: space-around;
+    align-items:center;
+    column-gap: 30px;
     padding: 35px;
 }
 
@@ -143,7 +144,7 @@ body {
 
 .overlay {
     display: none;
-    position: absolute;
+    position: fixed;
     height: 100%;
     width: 100%;
     background-color: rgba(0,0,0,0.5);
