--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ body {
     align-items: center;
     gap: 20px;
     width: 30%;
+    min-width: 250px;
 }
 
 .book .btn {
@@ -166,6 +167,7 @@ body {
     align-items: center;
     font-size: 24px;
     width: 30%;
+    min-width: 300px;
     height: 90%;
     border-radius: 5px;
     padding: 20px;
@@ -204,4 +206,15 @@ body {
 
 .btn.submit:hover {
     background-color: var(--btnBgPositiveHover);
+}
+
+@media screen and (max-width: 600px) {
+    .header {
+        flex-direction: column;
+    }
+
+    .booksContainer {
+        flex-direction: column;
+        gap: 20px;
+    }
 }
